# video-resource

./: .gitattributes  README.md
2024-05-31_python-basics/: all.md  basics.md  basics_typing.md  data_structures.md  project_structure.md  setup__commands.md  setup__lint.md
2024-07-18_design-patterns/: 2024-07-18_design-patterns.md
2025-05-30_fastapi_pydantic/: fastapi_pydantic_sqlalchemy_impl_details.md
2025-06-01_mcp-transport-types/: mcp-transport-types.md
2025-06-06_python-async/: python-yield-async-await.md
2025-06-11_mcp-transport-standard/: mcp-transport-standard.md
2025-06-12_mcp_streamable/: _run_mcp-client__streamable__curl.sh  _run_mcp-server__streamable.sh  pyproject.toml  server_01_streamable.py
2025-06-14_context-manager/: context-manager.md
2025-06-24_python-async/: python-guide-async.md
2025-06-25_D06_llm-timeout/: user_llm_mcp_workflow_timeout_and_resource.md
2025-06-26_P14_diagram-phase1/: llm-request-diagram-phase-1.md
2025-06-30_api_link__03/: docker-compose.yml  pyproject.toml
2025-06-30_api_link__03/scripts/: run_all_servers.sh  test_phase1.sh  test_phase2.sh
2025-06-30_api_link__03/sql/: db_schema.sql
2025-06-30_api_link__03/src/github_mingzilla/api_link/api/endpoints/: api_config_controller.py
2025-06-30_api_link__03/src/github_mingzilla/api_link/core/: config.py  database.py  repo_util.py
2025-06-30_api_link__03/src/github_mingzilla/api_link/models/entities/: address.py  api_config.py
2025-06-30_api_link__03/src/github_mingzilla/llm_mcp/: __init__.py  llm_client.py  llm_mcp_server.py  mcp_client.py
2025-06-30_api_link__03/src/github_mingzilla/llm_mcp/models/: __init__.py  chat_models.py
2025-06-30_api_link__03/src/github_mingzilla/mcp/: api_config_mcp_proxy_server.py  mcp_client_utl.py  proxy_request.py  run_mcp-proxy-client-curl.sh
2025-06-30_api_link__03/src/github_mingzilla/mcp_poc/: api_config_server.py  mcp-fastapi-comparison.md
2025-06-30_api_link__04__mcp__phase_03_2__done-2-mcp-servers/: docker-compose.yml  pyproject.toml
2025-06-30_api_link__04__mcp__phase_03_2__done-2-mcp-servers/scripts/: run_all_servers.sh  test_phase1.sh  test_phase2.sh
2025-06-30_api_link__04__mcp__phase_03_2__done-2-mcp-servers/sql/: db_schema.sql
2025-07-05_P13/: python-fastapi-optimization-guide.md
2025-07-23_P17_python-style-guide/: _style-guide__python.md  _style-guide__python__min.md
2026-01-16_web_data_processing/01/: summary.md
2026-01-16_web_data_processing/03/: cleaned_web_text_Dec2025_parallel__excluded_items.txt
2026-01-16_web_data_processing/04/: step_02__02__text_gen.md
2026-01-16_web_data_processing/07/: show_data_distribution.sh  what_is_a_suitable_input_size.md
2026-01-16_web_data_processing/08/: 08_verification.md
2026-01-16_web_data_processing/10/: 10_apply_to_capability_matching_02.md
labels/AI01_prompt-engineering/: prompt-engineering-simplified.md
labels/AI02_docs-boundary-domains/: boundary_connection_diagram.md
labels/AI03_python-style-guide/: .pre-commit-config.yaml  _style-guide__python.md  _style-guide__python__min.md  _style-guide__python__simple.md
labels/D003_llm-mcp/: user_llm_mcp_workflow.md
labels/D005_streaming-and-tool/: user_llm_mcp_workflow_streaming_and_tool.md
labels/D011_llm-request/: llm-request-diagram-phase-2.md
labels/D013a_llm-request/: llm-request-diagram-phase-1.md
labels/D013f_llm-request/: llm-request-diagram-phase-2.md
labels/D014_load-testing-guide/: load_testing__00__simplified_overall.md
labels/D015_load-testing-process/: load_testing__01__process.md
labels/D016_load-testing-code/: comparision.md  llm-request-diagram-phase-3_summary_2.md  load_test_stream_mode.py  load_test_util.sh  run_load_testing_ollama_stream_8min.sh
labels/D019_difference-async-iterator-generator/: async_iter_and_async_gen.py
labels/D020_context_manager-reuse/: context_manager_async_flow.py  context_manager_async_flow_2.py  context_manager_async_flow_3.py  context_manager_flow.py
labels/D20_context_manager-reuse/: context_manager_async_flow.py  context_manager_flow.py
labels/GIT001_git-eol/: git-eol.md
labels/GIT002_git-branching/: branching_guide.md
labels/GN_neo4j/: 01__basic-theory-overview.md  03__bm25.md  04__1_data-abstraction_concepts.md  04__2_data-abstraction_convention.md  04__3_data-abstraction_decisions.md  04__4_data-abstraction_where-to-start.md  05__1_neo4j-cypher-basics.md  05__2_neo4j-cypher-examples.md  06__neo4j__filtering-metadata-efficiency.md  (+3 more)
labels/RAG/: 04__embedding.md  (+8 more)
labels/WDP_web_data_processing/22/: 22__packaging_and_ollama.md  22__training_and_packaging_cmd_output.md  pyproject.toml
labels/WDP_web_data_processing/22/ex_001__train/: main.py  run.json  run.sh
labels/WDP_web_data_processing/22/ex_002__register_ollama/: main.py  run.json  run.sh
(+328 files in other folders)
